--- a/trunk/ServiceStack.Examples/ServiceStack.Examples.ServiceInterface/ServiceStack.Examples.ServiceInterface.csproj
+++ b/trunk/ServiceStack.Examples/ServiceStack.Examples.ServiceInterface/ServiceStack.Examples.ServiceInterface.csproj
@@ -56,15 +56,17 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="GetAllUsersHandler.cs" />
-    <Compile Include="StoreNewUserHandler.cs" />
+    <Compile Include="GetFactorialService.cs" />
+    <Compile Include="GetAllUsersService.cs" />
+    <Compile Include="StoreNewUserService.cs" />
+    <Compile Include="Types\Greet.cs" />
     <Compile Include="Types\GetAllUsers.cs" />
     <Compile Include="Types\DeleteAllUsers.cs" />
-    <Compile Include="DeleteAllUsersHandler.cs" />
-    <Compile Include="GetFactorialHandler.cs" />
-    <Compile Include="GetUsersHandler.cs" />
+    <Compile Include="DeleteAllUsersService.cs" />
+    <Compile Include="GreetService.cs" />
+    <Compile Include="GetUsersService.cs" />
     <Compile Include="Types\GetFibonacciNumbers.cs" />
-    <Compile Include="GetFibonacciNumbersHandler.cs" />
+    <Compile Include="GetFibonacciNumbersService.cs" />
     <Compile Include="Types\GetFactorial.cs" />
     <Compile Include="Types\GetUsers.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
