--- a/trunk/ServiceStack.Examples/ServiceStack.Examples.Host.Web/Web.config
+++ b/trunk/ServiceStack.Examples/ServiceStack.Examples.Host.Web/Web.config
@@ -17,6 +17,7 @@
 	</configSections>
 	<appSettings>
 		<add key="Db4oConnectionString" value="~/App_Data/exampledb.db4o"/>
+		<add key="ServiceName" value="ServiceStack Examples"/>
 		<add key="DefaultFibonacciLimit" value="10"/>
 	</appSettings>
 	<connectionStrings/>
@@ -39,9 +40,9 @@
             The <authentication> section enables configuration 
             of the security authentication mode used by 
             ASP.NET to identify an incoming user. 
+			<authentication mode="Windows"/>
         -->
-		<authentication mode="Windows"/>
-		<!--
+			<!--
             The <customErrors> section enables configuration 
             of what to do if/when an unhandled error occurs 
             during the execution of a request. Specifically,  
@@ -53,6 +54,7 @@
             <error statusCode="404" redirect="FileNotFound.htm" />
         </customErrors>
         -->
+		<customErrors mode="Off"/>
 		<pages>
 			<controls>
 				<add tagPrefix="asp" namespace="System.Web.UI" assembly="System.Web.Extensions, Version=3.5.0.0, Culture=neutral, PublicKeyToken=31BF3856AD364E35"/>
@@ -64,6 +66,19 @@
 			<add verb="*" path="*.asmx" validate="false" type="System.Web.Script.Services.ScriptHandlerFactory, System.Web.Extensions, Version=3.5.0.0, Culture=neutral, PublicKeyToken=31BF3856AD364E35"/>
 			<add verb="*" path="*_AppService.axd" validate="false" type="System.Web.Script.Services.ScriptHandlerFactory, System.Web.Extensions, Version=3.5.0.0, Culture=neutral, PublicKeyToken=31BF3856AD364E35"/>
 			<add verb="GET,HEAD" path="ScriptResource.axd" type="System.Web.Handlers.ScriptResourceHandler, System.Web.Extensions, Version=3.5.0.0, Culture=neutral, PublicKeyToken=31BF3856AD364E35" validate="false"/>
+
+			<add path="Public/Metadata*" type="ServiceStack.WebHost.Endpoints.Metadata.IndexMetadataHandler, ServiceStack" verb="*" />
+			<add path="Public/Soap11/Wsdl*" type="ServiceStack.WebHost.Endpoints.Metadata.Soap11WsdlMetadataHandler, ServiceStack" verb="*" />
+			<add path="Public/Soap11/Metadata*" type="ServiceStack.WebHost.Endpoints.Metadata.Soap11MetadataHandler, ServiceStack" verb="*" />
+			<add path="Public/Soap12/Wsdl*" type="ServiceStack.WebHost.Endpoints.Metadata.Soap12WsdlMetadataHandler, ServiceStack" verb="*" />
+			<add path="Public/Soap12/Metadata*" type="ServiceStack.WebHost.Endpoints.Metadata.Soap12MetadataHandler, ServiceStack" verb="*" />
+			<add path="Public/Xml/Metadata*" type="ServiceStack.WebHost.Endpoints.Metadata.XmlMetadataHandler, ServiceStack" verb="*" />
+			<add path="Public/Xml/AsyncOneWay/*" type="ServiceStack.WebHost.Endpoints.XmlAsyncOneWayHandler, ServiceStack" verb="*" />
+			<add path="Public/Xml/SyncReply/*" type="ServiceStack.WebHost.Endpoints.XmlSyncReplyHandler, ServiceStack" verb="*" />
+			<add path="Public/Json/Metadata*" type="ServiceStack.WebHost.Endpoints.Metadata.JsonMetadataHandler, ServiceStack" verb="*" />
+			<add path="Public/Json/AsyncOneWay/*" type="ServiceStack.WebHost.Endpoints.JsonAsyncOneWayHandler, ServiceStack" verb="*" />
+			<add path="Public/Json/SyncReply/*" type="ServiceStack.WebHost.Endpoints.JsonSyncReplyHandler, ServiceStack" verb="*" />
+
 		</httpHandlers>
 		<httpModules>
 			<add name="ScriptModule" type="System.Web.Handlers.ScriptModule, System.Web.Extensions, Version=3.5.0.0, Culture=neutral, PublicKeyToken=31BF3856AD364E35"/>
@@ -81,35 +96,6 @@
         The system.webServer section is required for running ASP.NET AJAX under Internet
         Information Services 7.0.  It is not necessary for previous version of IIS.
     -->
-	<system.webServer>
-		<validation validateIntegratedModeConfiguration="false"/>
-		<modules>
-			<remove name="ScriptModule"/>
-			<add name="ScriptModule" preCondition="managedHandler" type="System.Web.Handlers.ScriptModule, System.Web.Extensions, Version=3.5.0.0, Culture=neutral, PublicKeyToken=31BF3856AD364E35"/>
-		</modules>
-		<handlers>
-			<remove name="WebServiceHandlerFactory-Integrated"/>
-			<remove name="ScriptHandlerFactory"/>
-			<remove name="ScriptHandlerFactoryAppServices"/>
-			<remove name="ScriptResource"/>
-			<add name="ScriptHandlerFactory" verb="*" path="*.asmx" preCondition="integratedMode" type="System.Web.Script.Services.ScriptHandlerFactory, System.Web.Extensions, Version=3.5.0.0, Culture=neutral, PublicKeyToken=31BF3856AD364E35"/>
-			<add name="ScriptHandlerFactoryAppServices" verb="*" path="*_AppService.axd" preCondition="integratedMode" type="System.Web.Script.Services.ScriptHandlerFactory, System.Web.Extensions, Version=3.5.0.0, Culture=neutral, PublicKeyToken=31BF3856AD364E35"/>
-			<add name="ScriptResource" preCondition="integratedMode" verb="GET,HEAD" path="ScriptResource.axd" type="System.Web.Handlers.ScriptResourceHandler, System.Web.Extensions, Version=3.5.0.0, Culture=neutral, PublicKeyToken=31BF3856AD364E35"/>
-		
-			<!--[ServiceStack Specific]: Enable all endpoints handlers that you want available to handle your request -->
-			<add name="Endpoints.Index" path="Public/Metadata" type="ServiceStack.WebHost.Endpoints.Metadata.IndexMetadataHandler, ServiceStack" verb="*" preCondition="integratedMode" resourceType="Unspecified"/>
-			<add name="Soap11.Wsdl" path="Public/Soap11/Wsdl" type="ServiceStack.WebHost.Endpoints.Metadata.Soap11WsdlMetadataHandler, ServiceStack" verb="*" preCondition="integratedMode" resourceType="Unspecified"/>
-			<add name="Soap11.Metadata" path="Public/Soap11/Metadata" type="ServiceStack.WebHost.Endpoints.Metadata.Soap11MetadataHandler, ServiceStack" verb="*" preCondition="integratedMode" resourceType="Unspecified"/>
-			<add name="Soap12.Wsdl" path="Public/Soap12/Wsdl" type="ServiceStack.WebHost.Endpoints.Metadata.Soap12WsdlMetadataHandler, ServiceStack" verb="*" preCondition="integratedMode" resourceType="Unspecified"/>
-			<add name="Soap12.Metadata" path="Public/Soap12/Metadata" type="ServiceStack.WebHost.Endpoints.Metadata.Soap12MetadataHandler, ServiceStack" verb="*" preCondition="integratedMode" resourceType="Unspecified"/>
-			<add name="Xml.Metadata" path="Public/Xml/Metadata" type="ServiceStack.WebHost.Endpoints.Metadata.XmlMetadataHandler, ServiceStack" verb="*" preCondition="integratedMode" resourceType="Unspecified"/>
-			<add name="Xml.AsyncOneWay" path="Public/Xml/AsyncOneWay" type="ServiceStack.WebHost.Endpoints.XmlAsyncOneWayHandler, ServiceStack" verb="*" preCondition="integratedMode" resourceType="Unspecified"/>
-			<add name="Xml.SyncReply" path="Public/Xml/SyncReply" type="ServiceStack.WebHost.Endpoints.XmlSyncReplyHandler, ServiceStack" verb="*" preCondition="integratedMode" resourceType="Unspecified"/>
-			<add name="Json.Metadata" path="Public/Json/Metadata" type="ServiceStack.WebHost.Endpoints.Metadata.JsonMetadataHandler, ServiceStack" verb="*" preCondition="integratedMode" resourceType="Unspecified"/>
-			<add name="Json.AsyncOneWay" path="Public/Json/AsyncOneWay" type="ServiceStack.WebHost.Endpoints.JsonAsyncOneWayHandler, ServiceStack" verb="*" preCondition="integratedMode" resourceType="Unspecified"/>
-			<add name="Json.SyncReply" path="Public/Json/SyncReply" type="ServiceStack.WebHost.Endpoints.JsonSyncReplyHandler, ServiceStack" verb="*" preCondition="integratedMode" resourceType="Unspecified"/>
-		</handlers>
-	</system.webServer>
 
 	<!--[ServiceStack Specific]: Enable all Soap 1.1 and Soap 1.2 WCF bindings. Endpoints at Public/Soap11/*.svc and Public/Soap12/*.svc -->
 	<system.serviceModel>
