--- a/trunk/Common/ServiceStack.Common/ServiceStack.OrmLite.TestsPerf/ServiceStack.OrmLite.TestsPerf.csproj
+++ b/trunk/Common/ServiceStack.Common/ServiceStack.OrmLite.TestsPerf/ServiceStack.OrmLite.TestsPerf.csproj
@@ -38,6 +38,9 @@
       <HintPath>..\Lib\ServiceStack.Interfaces.dll</HintPath>
     </Reference>
     <Reference Include="System" />
+    <Reference Include="System.ComponentModel.DataAnnotations">
+      <RequiredTargetFramework>3.5</RequiredTargetFramework>
+    </Reference>
     <Reference Include="System.Core">
       <RequiredTargetFramework>3.5</RequiredTargetFramework>
     </Reference>
@@ -58,6 +61,7 @@
     <Compile Include="Scenarios\OrmLite\InsertModelWithFieldsOfDifferentTypesScenario.cs" />
     <Compile Include="Scenarios\ScenarioBase.cs" />
     <Compile Include="Scenarios\OrmLite\InsertSampleOrderLineScenario.cs" />
+    <Compile Include="Support\Northwind.models.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\ServiceStack.CacheAccess.Providers.Tests\ServiceStack.CacheAccess.Providers.Tests.csproj">
