--- a/trunk/Common/ServiceStack.Common/ServiceStack.Configuration/ServiceStack.Configuration.csproj
+++ b/trunk/Common/ServiceStack.Common/ServiceStack.Configuration/ServiceStack.Configuration.csproj
@@ -1,9 +1,9 @@
-<?xml version="1.0" encoding="utf-8"?>
+﻿<?xml version="1.0" encoding="utf-8"?>
 <Project DefaultTargets="Build" xmlns="http://schemas.microsoft.com/developer/msbuild/2003" ToolsVersion="3.5">
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProductVersion>9.0.30729</ProductVersion>
+    <ProductVersion>9.0.21022</ProductVersion>
     <SchemaVersion>2.0</SchemaVersion>
     <ProjectGuid>{17FEDF77-62F1-48F8-BB82-3BAB5E477BCD}</ProjectGuid>
     <OutputType>Library</OutputType>
@@ -51,17 +51,8 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="ConfigUtils.cs" />
-    <Compile Include="EmptyObjectFactory.cs" />
-    <Compile Include="FactoryUtils.cs" />
-    <Compile Include="IObjectFactory.cs" />
-    <Compile Include="ObjectsConfigurationSectionHandler.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="ConfigurationResourceManager.cs" />
-    <Compile Include="Support\LateBoundObjectTypeBuilder.cs" />
-    <Compile Include="Support\ObjectConfigurationType.cs" />
-    <Compile Include="Support\ObjectConfigurationTypeFactory.cs" />
-    <Compile Include="Support\PropertyConfigurationType.cs" />
-    <Compile Include="Support\RefType.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\ServiceStack.Common\ServiceStack.Common.csproj">
